# sim-panel

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  NOTICE  README.md  developer_manual.md  pyproject.toml  pytest.ini
.github/workflows/: docs.yml
data/: manual_beer_demo.csv  personas_beer_demo.jsonl  personas_beer_demo_large.jsonl  personas_beer_demo_large_local.jsonl  products_beer_demo.jsonl  products_beer_demo_large.jsonl  products_beer_demo_large_local.jsonl
docs/source/: analysis.md  api.md  benchmarks.md  cli.md  comparison.md  concepts.md  conf.py  configs.md  development.md  generation.md  index.md  installation.md  quickstart.md  schema.md  sources.md
examples/: backend_ollama.yaml  panelists_enrich.yaml
examples/analysis/: analysis_beer_demo.yaml  compare_amazon_benchmark_smoke.yaml
examples/backends/: ollama.yaml  server.yaml
examples/data_gen/: beer_demo.yaml  beer_demo_large.yaml
examples/generation/: manual.yaml  minimal.yaml  questionnaire.yaml  random.yaml  self_selection.yaml
examples/snippets/: panelists_eval.yaml  products_enrich.yaml
examples/sources/: import_amazon_reviews_2023_full.yaml
outputs/amazon_self_selection/: data_dictionary.json  events.jsonl  metadata.json
outputs/amazon_self_selection_cot/: data_dictionary.json  events.jsonl  metadata.json
outputs/compare_amazon_benchmark_smoke/: benchmark_product_diagnostics_topk.csv  benchmark_product_diagnostics_topk.json  benchmark_summary.csv  benchmark_summary.json  comparison_report.md  condition_metrics.csv  condition_metrics.json  pivot_tables.json  reference_label.json
outputs/compare_amazon_cross_smoke/: comparison_report.md  condition_metrics.csv  (+3 more)
sim_panel/: __init__.py
(+318 files in other folders)
