[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sim-panel"
version = "0.0.1"
description = "Synthetic customer-product interaction data generator."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pydantic>=2.0",
    "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sim_panel*"]

[project.scripts]
sim-panel = "sim_panel.cli.main:main"