[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sim-panel"
version = "0.0.1"
description = "Synthetic customer-product interaction data generator."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pydantic>=2.0",
    "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sim_panel*"]

[project.scripts]
sim-panel = "sim_panel.cli.main:main"

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "myst-parser>=2.0",
    "sphinx-autodoc-typehints>=1.25",
    "furo>=2024.1.29",
    "sphinx-copybutton>=0.5.2",
    "sphinx-autobuild>=2024.4.16",
]